Prepare for piratebay configuration.

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -22,6 +22,19 @@
       - name: backend_https
         servername: www4.example.com
         backend_url: https://www.example.com/
+      - name: piratebay
+        servername: piratebay.nl
+        backend_url: https://piratebay.se/
+        proxy_preserve_host: Off
+        proxy_requests: Off
+        setenv:
+          - name: force-proxy-request-1.0
+            value: 1
+          - name: proxy-nokeepalive
+            value: 1
+          - name: proxy-initial-not-pooled
+          - name: proxy-sendchunks
+            value: 1
 
   roles:
     - ansible-role-httpd
