--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,3 +12,6 @@ httpd_ssl_servername: "{{ ansible_fqdn }}"
 
 # For SSL a TCP port is required.
 httpd_ssl_port: 443
+
+# Set ProxyPreserveHost
+httpd_proxy_preserve_host: On
