--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -8,23 +8,23 @@
     httpd_locations:
       - name: mylocation1
         location: /mylocation1
-        backend_url: http://localhost:8080/myapplication
+        backend_url: "http://localhost:8080/myapplication"
     httpd_vhosts:
       - name: docroot
         servername: www1.example.com
         documentroot: /var/www/html/www1.example.com
       - name: backend_http
         servername: www2.example.com
-        backend_url: http://www.example.com/
+        backend_url: "http://www.example.com/"
       - name: remote
         servername: www3.example.com
-        remote: http://localhost:3128/
+        remote: "http://localhost:3128/"
       - name: backend_https
         servername: www4.example.com
-        backend_url: https://www.example.com/
+        backend_url: "https://www.example.com/"
       - name: piratebay
         servername: piratebay.nl
-        backend_url: https://piratebay.se/
+        backend_url: "https://thepirate-bay.org/"
         proxy_preserve_host: Off
         proxy_requests: Off
         setenv:
