--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -9,8 +9,9 @@ on:
   push:
     tags_ignore:
       - '*'
+  pull_request:
   schedule:
-    - cron: '40 20 8 * *'
+    - cron: '41 10 8 * *'
 
 jobs:
   lint:
