Placing ports.conf was skipped because of and AND instead of an OR.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -114,7 +114,7 @@
     - restart httpd
   when:
     - ansible_os_family == "Debian"
-    - ansible_os_family == "Suse"
+      ansible_os_family == "Suse"
 
 - name: configure redirect from http to https
   template:
