--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -10,11 +10,13 @@
         port: "{{ item }}"
         timeout: 2
       loop:
-        - "80"
-        - "443"
+        - "8080"
+        - "8443"
 
     - name: interact with webserver
       uri:
-        url: "https://127.0.0.1/mylocation1/"
-        status_code: 503
+        url: "https://127.0.0.1:8443/mylocation1/"
+        status_code: 
+          - 502
+          - 503
         validate_certs: no
