--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -9,3 +9,7 @@
     - role: robertdebock.epel
     - role: robertdebock.buildtools
     - role: robertdebock.python_pip
+    - role: robertdebock.openssl
+      openssl_items:
+        - name: apache-httpd
+          common_name: "{{ ansible_fqdn }}"
