--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,8 +1,5 @@
 ---
 # vars file for httpd
-httpd_requirements:
-  - pyopenssl
-
 httpd_sebooleans:
   - httpd_can_network_connect
 
@@ -94,3 +91,21 @@ _httpd_binary:
   Debian: apachectl
 
 httpd_binary: "{{ _httpd_binary[ansible_os_family] | default(_httpd_binary['default']) }}"
+
+_httpd_openssl_key_directory:
+  default: /tmp
+  Alpine: /etc/ssl/private
+  Debian: /etc/ssl/private
+  RedHat: /etc/pki/tls/private
+  Suse: /etc/ssl/private
+
+httpd_openssl_key_directory: "{{ _httpd_openssl_key_directory[ansible_os_family] | default(_httpd_openssl_key_directory['default']) }}"
+
+_httpd_openssl_crt_directory:
+  default: /tmp
+  Alpine: /etc/ssl/certs
+  Debian: /etc/ssl/certs
+  RedHat: /etc/pki/tls/certs
+  Suse: /etc/ssl/certs
+
+httpd_openssl_crt_directory: "{{ _httpd_openssl_crt_directory[ansible_os_family] | default(_httpd_openssl_crt_directory['default']) }}"
