--- a/vars/main.yml
+++ b/vars/main.yml
@@ -74,7 +74,7 @@ httpd_ports_conf: "{{ _httpd_ports_conf[ansible_os_family] }}"
 _httpd_data_directory:
   default: /var/www/html
   Alpine: /var/www/{{ httpd_servername | default(ansible_fqdn) }}
-  Suse: /src/www/htdocs
+  Suse: /srv/www/htdocs
 
 httpd_data_directory: "{{ _httpd_data_directory[ansible_os_family] | default(_httpd_data_directory['default']) }}"
 
