--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -7,8 +7,8 @@
   vars:
     _httpd_data_directory:
       default: /var/www/html
-      Alpine: /var/www/{{ httpd_servername | default(ansible_fqdn) }}
-      Suse: /src/www/htdocs
+      Alpine: /var/www/localhost
+      Suse: /srv/www/htdocs
     
     httpd_data_directory: "{{ _httpd_data_directory[ansible_os_family] | default(_httpd_data_directory['default']) }}"
 
