--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 # tasks file for httpd
+- name: include assert.yml
+  include_tasks: assert.yml
+
 - name: install apache httpd
   package:
     name: "{{ httpd_packages }}"
