--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,6 +2,7 @@
 # tasks file for httpd
 - name: include assert.yml
   include_tasks: assert.yml
+  run_once: yes
 
 - name: install apache httpd
   package:
