--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -10,7 +10,7 @@
   assert:
     that:
       - httpd_port is defined
-      - httpd_port | int
+      - httpd_port is number
       - httpd_port | int > 0
       - httpd_port | int < 65536
     quiet: yes
@@ -26,7 +26,7 @@
   assert:
     that:
       - httpd_ssl_port is defined
-      - httpd_ssl_port | int
+      - httpd_ssl_port is number
       - httpd_ssl_port | int > 0
       - httpd_ssl_port | int < 65535
       - httpd_ssl_port != httpd_port
