--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -36,7 +36,7 @@
   assert:
     that:
       - httpd_proxy_preserve_host is defined
-      - httpd_proxy_preserve_host | type_debug == "bool"
+      - httpd_proxy_preserve_host is boolean
     quiet: yes
 
 - name: test if httpd_locations is set correctly
