Empty line to start and dont restart when in checkmode, software is missing.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,6 @@
 ---
 # handlers file for httpd
+
 - name: test httpd configuration validity
   command: "{{ httpd_binary }} -t"
   changed_when: no
@@ -8,3 +9,5 @@
   service:
     name: "{{ httpd_service }}"
     state: restarted
+  when:
+    - not ansible_check_mode | bool
