Assert new values.

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -19,6 +19,9 @@
         - name: backend_http
           servername: www2.example.com
           backend_url: "http://www.example.com/"
+          serveralias:
+            - example.com
+            - www.example.com
         - name: remote
           servername: www3.example.com
           remote: "http://localhost:3128/"
