--- a/requirements.yml
+++ b/requirements.yml
@@ -6,3 +6,5 @@ roles:
   - name: robertdebock.openssl
   - name: robertdebock.python_pip
   - name: robertdebock.selinux
+collections:
+  - name: ansible.builtin
