--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,7 +7,7 @@
   delegate_to: localhost
 
 - name: install apache httpd
-  package:
+  ansible.builtin.package:
     name: "{{ httpd_packages }}"
     state: present
 
@@ -37,7 +37,7 @@
     - ansible_selinux.status == "enabled"
 
 - name: configure ssl
-  template:
+  ansible.builtin.template:
     src: ssl.conf.j2
     dest: "{{ httpd_config_directory }}/ssl.conf"
     mode: "0644"
@@ -46,7 +46,7 @@
     - restart httpd
 
 - name: configure locations
-  template:
+  ansible.builtin.template:
     src: location.conf.j2
     dest: "{{ httpd_config_directory }}/{{ item.name }}.conf"
     mode: "0644"
@@ -60,7 +60,7 @@
     label: "{{ item.name }}"
 
 - name: configure vhosts
-  template:
+  ansible.builtin.template:
     src: vhost.conf.j2
     dest: "{{ httpd_config_directory }}/{{ item.name }}.conf"
     mode: "0644"
@@ -74,7 +74,7 @@
     label: "{{ item.name }}"
 
 - name: configure httpd
-  template:
+  ansible.builtin.template:
     src: "{{ httpd_config_src }}"
     dest: "{{ httpd_config_dest }}"
     mode: "0644"
@@ -83,7 +83,7 @@
     - restart httpd
 
 - name: configure listening ports
-  template:
+  ansible.builtin.template:
     src: "{{ httpd_ports_conf }}.j2"
     dest: "{{ httpd_server_root }}/{{ httpd_ports_conf }}"
     mode: "0644"
@@ -94,7 +94,7 @@
     - ansible_os_family in [ "Debian", "Suse" ]
 
 - name: configure redirect from http to https
-  template:
+  ansible.builtin.template:
     src: default_vhost.conf.j2
     dest: "{{ httpd_config_directory }}/default_vhost.conf"
     mode: "0644"
@@ -103,7 +103,7 @@
     - restart httpd
 
 - name: create docroot
-  file:
+  ansible.builtin.file:
     path: "{{ item.documentroot }}"
     state: directory
     mode: "0755"
@@ -113,10 +113,10 @@
     - item.documentroot is defined
 
 - name: flush handlers
-  meta: flush_handlers
+  ansible.builtin.meta: flush_handlers
 
 - name: start and enable httpd
-  service:
+  ansible.builtin.service:
     name: "{{ httpd_service }}"
     state: started
     enabled: yes
