--- a/vars/main.yml
+++ b/vars/main.yml
@@ -26,7 +26,8 @@ _httpd_service:
   Alpine: apache2
   Debian: apache2
   Suse: apache2
-  RedHat: httpd
+  RedHat: &RHEL httpd
+  Rocky: *RHEL
 
 httpd_service: "{{ _httpd_service[ansible_os_family] | default(_httpd_service['default']) }}"
 
@@ -52,7 +53,8 @@ httpd_config_directory: "{{ _httpd_config_directory[ansible_os_family] | default
 _httpd_config_src:
   Alpine: httpd.conf-Alpine.j2
   Debian: apache2.conf-Debian.j2
-  RedHat: httpd.conf-RedHat.j2
+  RedHat: &RHEL httpd.conf-RedHat.j2
+  Rocky: *RHEL
   Suse: httpd.conf-Suse.j2
 
 httpd_config_src: "{{ _httpd_config_src[ansible_os_family] }}"
@@ -60,7 +62,8 @@ httpd_config_src: "{{ _httpd_config_src[ansible_os_family] }}"
 _httpd_config_dest:
   Alpine: "{{ httpd_server_root }}/httpd.conf"
   Debian: "{{ httpd_server_root }}/httpd.conf"
-  RedHat: "{{ httpd_server_root }}/conf/httpd.conf"
+  RedHat: &RHEL "{{ httpd_server_root }}/conf/httpd.conf"
+  Rocky: *RHEL
   Suse: "{{ httpd_server_root }}/httpd.conf"
 
 httpd_config_dest: "{{ _httpd_config_dest[ansible_os_family] }}"
@@ -98,7 +101,8 @@ _httpd_openssl_key_directory:
   default: /tmp
   Alpine: /etc/ssl/private
   Debian: /etc/ssl/private
-  RedHat: /etc/pki/tls/private
+  RedHat: &RHEL /etc/pki/tls/private
+  Rocky: *RHEL
   Suse: /etc/ssl/private
 
 httpd_openssl_key_directory: "{{ _httpd_openssl_key_directory[ansible_os_family] | default(_httpd_openssl_key_directory['default']) }}"
@@ -107,7 +111,8 @@ _httpd_openssl_crt_directory:
   default: /tmp
   Alpine: /etc/ssl/certs
   Debian: /etc/ssl/certs
-  RedHat: /etc/pki/tls/certs
+  RedHat: &RHEL /etc/pki/tls/certs
+  Rocky: *RHEL
   Suse: /etc/ssl/certs
 
 httpd_openssl_crt_directory: "{{ _httpd_openssl_crt_directory[ansible_os_family] | default(_httpd_openssl_crt_directory['default']) }}"
