--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -7,7 +7,7 @@
   roles:
     - role: ansible-role-httpd
       httpd_port: 8080
-      httpd_ssl_port: 8443
+      # httpd_ssl_port: 8443
       httpd_locations:
         - name: mylocation1
           location: /mylocation1
