--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,13 +37,27 @@
     - ansible_selinux.status == "enabled"
 
 - name: configure ssl
-  ansible.builtin.template:
-    src: ssl.conf.j2
-    dest: "{{ httpd_config_directory }}/ssl.conf"
-    mode: "0644"
-  notify:
-    - test httpd configuration validity
-    - restart httpd
+  block:
+    - name: install ssl packages
+      package:
+        name: "{{ httpd_ssl_packages }}"
+        state: present
+    - name: place configuration
+      ansible.builtin.template:
+        src: ssl.conf.j2
+        dest: "{{ httpd_config_directory }}/ssl.conf"
+        mode: "0644"
+      notify:
+        - test httpd configuration validity
+        - restart httpd
+    - name: configure redirect from http to https
+      ansible.builtin.template:
+        src: default_vhost.conf.j2
+        dest: "{{ httpd_config_directory }}/default_vhost.conf"
+        mode: "0644"
+      notify:
+        - test httpd configuration validity
+        - restart httpd
   when:
     - https_ssl_enable
 
@@ -94,17 +108,6 @@
     - restart httpd
   when:
     - ansible_os_family in [ "Debian", "Suse" ]
-
-- name: configure redirect from http to https
-  ansible.builtin.template:
-    src: default_vhost.conf.j2
-    dest: "{{ httpd_config_directory }}/default_vhost.conf"
-    mode: "0644"
-  notify:
-    - test httpd configuration validity
-    - restart httpd
-  when:
-    - https_ssl_enable
 
 - name: create docroot
   ansible.builtin.file:
