--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -26,19 +26,19 @@
         - name: remote
           servername: www3.example.com
           remote: "http://localhost:3128/"
-        - name: backend_https
-          servername: www4.example.com
-          backend_url: "https://www.example.com/"
-        - name: piratebay
-          servername: piratebay.nl
-          backend_url: "https://thepirate-bay.org/"
-          proxy_preserve_host: Off
-          proxy_requests: Off
-          setenv:
-            - name: force-proxy-request-1.0
-              value: 1
-            - name: proxy-nokeepalive
-              value: 1
-            - name: proxy-initial-not-pooled
-            - name: proxy-sendchunks
-              value: 1
+        # - name: backend_https
+        #   servername: www4.example.com
+        #   backend_url: "https://www.example.com/"
+        # - name: piratebay
+        #   servername: piratebay.nl
+        #   backend_url: "https://thepirate-bay.org/"
+        #   proxy_preserve_host: Off
+        #   proxy_requests: Off
+        #   setenv:
+        #     - name: force-proxy-request-1.0
+        #       value: 1
+        #     - name: proxy-nokeepalive
+        #       value: 1
+        #     - name: proxy-initial-not-pooled
+        #     - name: proxy-sendchunks
+        #       value: 1
