--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -13,7 +13,7 @@
         timeout: 2
       loop:
         - "8080"
-        - "8443"
+        # - "8443"
 
     - name: place sample index.html
       ansible.builtin.copy:
@@ -23,13 +23,11 @@
 
     - name: see if the sample index.html returns 200
       ansible.builtin.uri:
-        url: "https://127.0.0.1:8443/"
-        validate_certs: no
+        url: "http://127.0.0.1:8080/"
 
     - name: see if TRACE option returns 405
       ansible.builtin.uri:
-        url: "https://127.0.0.1:8443/"
+        url: "http://127.0.0.1:8080/"
         method: TRACE
         status_code:
           - 405
-        validate_certs: no
