--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -39,7 +39,7 @@
           - 404
 
     - name: install passlib
-      package:
+      ansible.builtin.package:
         name: python3-passlib
         state: present
 
