--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,8 @@ _httpd_packages:
     - w3m
   Suse:
     - httpd
+    - lynx
+    - w3m
 
 httpd_packages: "{{ _httpd_packages[ansible_os_family] | default(_httpd_packages['default']) }}"
 
