--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           path: "${{ github.repository }}"
       - name: molecule
-        uses: robertdebock/molecule-action@2.6.16
+        uses: robertdebock/molecule-action@2.7.0
         with:
           command: lint
   test:
@@ -33,7 +33,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - image: "rockylinux"
+          - image: "enterpriselinux"
             tag: "latest"
           - image: "debian"
             tag: "latest"
@@ -61,7 +61,7 @@ jobs:
       - name: parse apparmor for mysql
         run: sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
       - name: molecule
-        uses: robertdebock/molecule-action@2.6.16
+        uses: robertdebock/molecule-action@2.7.0
         with:
           image: ${{ matrix.config.image }}
           tag: ${{ matrix.config.tag }}
