--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 ---
-image: robertdebock/github-action-molecule:3.0.6
+image: robertdebock/github-action-molecule:3.3.0
 
 services:
   - docker:dind
@@ -16,7 +16,7 @@ molecule:
   retry: 1
   parallel:
     matrix:
-      - image: "rockylinux"
+      - image: "enterpriselinux"
         tag: "latest"
       - image: "debian"
         tag: "latest"
