Add an option to create docroot.

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -46,6 +46,10 @@
       #       - name: proxy-initial-not-pooled
       #       - name: proxy-sendchunks
       #         value: 1
+      #   - name: no_doc_root
+      #     servername: nodocroot.example.com
+      #     documentroot: /var/www/html/nodocroot
+      #     create_docroot: no
       httpd_directories:
         - name: my_directory
           path: "{{ httpd_data_directory }}/my_directory"
