--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -86,6 +86,18 @@
   when:
     - httpd_vhosts is defined
 
+- name: test if item.create_docroot in httpd_vhosts is set correctly
+  ansible.builtin.assert:
+    that:
+      - item.create_docroot is boolean
+    quiet: yes
+  loop: "{{ httpd_vhosts }}"
+  loop_control:
+    label: "{{ item.name }}"
+  when:
+    - httpd_vhosts is defined
+    - item.create_docroot
+
 - name: test if item.serveralias in httpd_vhosts is set correctly
   ansible.builtin.assert:
     that:
