Remove mod_ssl for Debian

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -26,7 +26,9 @@ _httpd_ssl_packages:
     - openssl
   Alpine:
     - apache2-ssl
-
+  Debian: 
+    - openssl
+      
 httpd_ssl_packages: "{{ _httpd_ssl_packages[ansible_os_family] | default(_httpd_ssl_packages['default'] ) }}"
 
 _httpd_service:
