--- a/vars/main.yml
+++ b/vars/main.yml
@@ -36,8 +36,7 @@ _httpd_service:
   Alpine: apache2
   Debian: apache2
   Suse: apache2
-  RedHat: &redhat_service httpd
-  Rocky: *redhat_service
+  RedHat: httpd
 
 httpd_service: "{{ _httpd_service[ansible_os_family] | default(_httpd_service['default'] ) }}"
 
@@ -63,8 +62,7 @@ httpd_config_directory: "{{ _httpd_config_directory[ansible_os_family] | default
 _httpd_config_src:
   Alpine: httpd.conf-Alpine.j2
   Debian: apache2.conf-Debian.j2
-  RedHat: &redhat_config_src httpd.conf-RedHat.j2
-  Rocky: *redhat_config_src
+  RedHat: httpd.conf-RedHat.j2
   Suse: httpd.conf-Suse.j2
 
 httpd_config_src: "{{ _httpd_config_src[ansible_os_family] }}"
@@ -72,8 +70,7 @@ httpd_config_src: "{{ _httpd_config_src[ansible_os_family] }}"
 _httpd_config_dest:
   Alpine: "{{ httpd_server_root }}/httpd.conf"
   Debian: "{{ httpd_server_root }}/httpd.conf"
-  RedHat: &redhat_config_dest "{{ httpd_server_root }}/conf/httpd.conf"
-  Rocky: *redhat_config_dest
+  RedHat: "{{ httpd_server_root }}/conf/httpd.conf"
   Suse: "{{ httpd_server_root }}/httpd.conf"
 
 httpd_config_dest: "{{ _httpd_config_dest[ansible_os_family] }}"
@@ -111,8 +108,7 @@ _httpd_openssl_key_directory:
   default: /tmp
   Alpine: /etc/ssl/private
   Debian: /etc/ssl/private
-  RedHat: &redhat_openssl_key_directory /etc/pki/tls/private
-  Rocky: *redhat_openssl_key_directory
+  RedHat: /etc/pki/tls/private
   Suse: /etc/ssl/private
 
 httpd_openssl_key_directory: "{{ _httpd_openssl_key_directory[ansible_os_family] | default(_httpd_openssl_key_directory['default'] ) }}"
@@ -121,8 +117,7 @@ _httpd_openssl_crt_directory:
   default: /tmp
   Alpine: /etc/ssl/certs
   Debian: /etc/ssl/certs
-  RedHat: &redhat_openssl_crt_directory /etc/pki/tls/certs
-  Rocky: *redhat_openssl_crt_directory
+  RedHat: /etc/pki/tls/certs
   Suse: /etc/ssl/certs
 
 httpd_openssl_crt_directory: "{{ _httpd_openssl_crt_directory[ansible_os_family] | default(_httpd_openssl_crt_directory['default'] ) }}"
