--- a/tasks/ssl.yml
+++ b/tasks/ssl.yml
@@ -1,24 +1,24 @@
 ---
 
-- name: install ssl packages
+- name: Install ssl packages
   ansible.builtin.package:
     name: "{{ httpd_ssl_packages }}"
     state: present
 
-- name: place configuration
+- name: Place configuration
   ansible.builtin.template:
     src: ssl.conf.j2
     dest: "{{ httpd_config_directory }}/ssl.conf"
     mode: "0644"
   notify:
-    - test httpd configuration validity
-    - restart httpd
+    - Test httpd configuration validity
+    - Restart httpd
 
-- name: configure redirect from http to https
+- name: Configure redirect from http to https
   ansible.builtin.template:
     src: default_vhost.conf.j2
     dest: "{{ httpd_config_directory }}/default_vhost.conf"
     mode: "0644"
   notify:
-    - test httpd configuration validity
-    - restart httpd
+    - Test httpd configuration validity
+    - Restart httpd
