--- a/tasks/vhosts.yml
+++ b/tasks/vhosts.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: create docroot
+- name: Create docroot
   ansible.builtin.file:
     path: "{{ item.documentroot }}"
     state: directory
@@ -13,7 +13,7 @@
     - item.documentroot is defined
     - item.create_docroot is not defined or item.create_docroot
 
-- name: configure vhosts
+- name: Configure vhosts
   ansible.builtin.template:
     src: vhost.conf.j2
     dest: "{{ httpd_config_directory }}/{{ item.name }}.conf"
@@ -22,5 +22,5 @@
   loop_control:
     label: "{{ item.name }}"
   notify:
-    - test httpd configuration validity
-    - restart httpd
+    - Test httpd configuration validity
+    - Restart httpd
